# audio-normalizer

./: .gitignore  README.md  __init__.py  audio_normalizer.py  cli.py  export_pptx_to_video.vbs  pptx_handler.py  pyproject.toml  run_export.bat  transcript_generator.py  utils.py  video_cli.py  video_handler.py
.claude/: settings.local.json
